--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, 
+body { 
+  height: 100%; 
+}
+body { 
+  margin: 0; 
+  font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+p{
+  font-size: 16px;
+  line-height: 28px;
+  position: relative;
+  &::first-letter:not(.no-first-letter) {
+    font-size: 200%;
+    color: #3f51b5;
+    font-weight: 500;
+    font-family: Palatino, URW Palladio L, serif;
+  }
+}
+img {
+  width: 100%;
+  height: auto;
+}
+
+section{
+  margin: 64px 0;
+}
+body
+section .mat-icon{
+  color: #333
+}
+
+section a{
+  color: #3f51b5;
+  font-weight: 500;
+  text-decoration: none;
+}
+
