--- a/src/app/cutcal/cutcal.component.scss
+++ b/src/app/cutcal/cutcal.component.scss
@@ -1,9 +1,37 @@
 :host {
-  margin: 16px;
+  margin: 32px;
   display: block;
 }
 
-p{
-  font-size: 16px;
-  line-height: 28px;
+.logo{
+  max-width: 120px
+}
+.team{
+  max-width: 550px;
+  float: right;
+  margin-left: 32px;
+}
+
+.arrow{
+  position: absolute;
+  top: -27px;
+  right: 367px;
+  font-size: 14px;
+  color: #555;
+}
+.mat-card{
+  margin-right: 32px;
+}
+
+.mat-card-avatar{
+  border-radius: 0;
+}
+
+.example-header-image {
+  background-image: url('../../assets/cutcal.png');
+  background-size: cover;
+}
+.under-armour{
+  background-image: url('../../assets/under-armour.svg');
+  background-size: cover;
 }
