--- a/src/app/cutcal/cutcal.component.scss
+++ b/src/app/cutcal/cutcal.component.scss
@@ -35,3 +35,10 @@
   background-image: url('../../assets/under-armour.svg');
   background-size: cover;
 }
+
+
+.tip{
+  color: #3f51b5;
+  font-weight: 500;
+  text-decoration: none;
+}
