--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -2,3 +2,15 @@
   margin: 32px;
   display: block;
 }
+.hyphens{
+  margin: 0;
+  color: #505160;
+}
+.link{
+  cursor: pointer;
+  margin-right: 8px;
+}
+.link img{
+  height: 40px;
+  width: 40px;
+}
