--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -4,6 +4,9 @@
 img.mat-list-icon {
   border-radius: 10% !important;
 }
+.mat-icon{
+  color: #3f51b5;
+}
 button{
   outline: none;
   cursor: pointer;
