--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,8 +12,11 @@ body {
 .spacer {
   flex: 1 1 auto;
 }
+li,
 p{
   color: #505160;
+}
+p{
   font-size: 16px;
   line-height: 28px;
   position: relative;
