--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,3 +9,10 @@
   width: 290px
 }
 
+.header-img{
+  height: 45px;
+  width: 45px;
+}
+h1{
+  font: 500 26px/32px Roboto,"Helvetica Neue",sans-serif;
+}
