--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,3 +2,55 @@
   margin: 32px;
   display: block;
 }
+
+@mixin linear-gradient($top, $bottom){
+  background: $top; /* Old browsers */
+  background: -moz-linear-gradient(top,  $top 0%, $bottom 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$top), color-stop(100%,$bottom)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  $top 0%,$bottom 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  $top 0%,$bottom 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  $top 0%,$bottom 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  $top 0%,$bottom 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
+}
+
+.notepad {
+  display: block;
+  min-width: 100px;
+  max-width: 640px;
+  margin: 0 auto;
+  min-height: 100px;
+  outline: none;
+  padding: 35px 50px;
+	position: relative;
+	border: 1px solid #DFE8EC;
+	@include linear-gradient(#DFE8EC 0%, white 8%);
+	-webkit-background-size: 100% 30px;
+	-moz-background-size: 100% 30px;
+  background-size: 100% 30px;
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 30px;
+    width: 1px;
+    height: 100%;
+    border: 1px solid indianred;
+    opacity: 0.5;
+  }
+}
+
+.notepad * {
+  background: transparent;
+  border: none;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  color: #333;
+  line-height: 1.85rem;
+  font-style: italic;
+  font-family: Trebuchet MS, sans-serif;
+  font-size: 1.2rem;
+  resize: none;
+}
