--- a/src/app/citi/citi.component.scss
+++ b/src/app/citi/citi.component.scss
@@ -1,10 +1,7 @@
 :host {
-  margin: 32px;
+  margin: 16px;
   display: block;
 }
-
-
-
 
 .logo{
   max-width: 350px
@@ -22,9 +19,6 @@
   font-size: 14px;
   color: #555;
 }
-.mat-card{
-  margin-right: 32px;
-}
 
 .mat-card-avatar{
   border-radius: 0;
@@ -35,3 +29,8 @@
   background-size: cover;
 }
 
+@media only screen and (min-width: 600px) {
+  :host {
+    margin: 32px;
+  }
+}
