--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -9,6 +9,7 @@ img.mat-list-icon {
 }
 button{
   outline: none;
+  background: transparent;
   cursor: pointer;
   padding: 0;
   box-sizing: border-box;
