--- a/src/app/cutcal/cutcal.component.scss
+++ b/src/app/cutcal/cutcal.component.scss
@@ -1,5 +1,5 @@
 :host {
-  margin: 32px;
+  margin: 16px;
   display: block;
 }
 
@@ -19,9 +19,8 @@
   font-size: 14px;
   color: #555;
 }
-.mat-card{
-  margin-right: 32px;
-}
+
+
 
 .mat-card-avatar{
   border-radius: 0;
@@ -41,4 +40,10 @@
   color: #3f51b5;
   font-weight: 500;
   text-decoration: none;
+}
+
+@media only screen and (min-width: 600px) {
+  :host {
+    margin: 32px;
+  }
 }
