--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
 :host {
-  margin: 32px;
+  margin: 16px;
   display: block;
 }
 
@@ -53,4 +53,10 @@
   font-family: Trebuchet MS, sans-serif;
   font-size: 1.2rem;
   resize: none;
+}
+
+@media only screen and (min-width: 600px) {
+  :host {
+    margin: 32px;
+  }
 }
