--- a/src/app/time-picker-page/time-picker-page.component.scss
+++ b/src/app/time-picker-page/time-picker-page.component.scss
@@ -1,13 +1,29 @@
 :host {
-  margin: 32px;
+  margin: 16px;
   display: block;
 }
+
+@media only screen and (min-width: 600px) {
+  :host {
+    margin: 32px;
+  }
+}
+
+
 .ng-material,
 .material {
   float: left;
-  width: 200px;
+  width: 140px;
   border: 1px solid #ccc;
-  margin-right: 32px;
+  margin-right: 16px;
+}
+
+@media only screen and (min-width: 600px) {
+  .ng-material,
+  .material {
+    width: 200px;
+    margin-right: 32px;
+  }
 }
 
 .toggle-example{
@@ -31,3 +47,4 @@
 li {
   line-height: 34px;
 }
+
