--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,7 +33,13 @@ img {
 }
 
 section:not(:first-child){
-  margin: 64px 0;
+  margin: 32px 0;
+}
+
+@media only screen and (min-width: 600px) {
+  section:not(:first-child){
+    margin: 64px 0;
+  }
 }
 body
 section .mat-icon{
