videos swapped out

--- a/src/app/citi/citi.component.scss
+++ b/src/app/citi/citi.component.scss
@@ -28,6 +28,9 @@
   background-image: url('../../assets/citi.png');
   background-size: cover;
 }
+.add-margin{
+  margin-left: 4px;
+}
 
 @media only screen and (min-width: 600px) {
   :host {
