--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,13 @@ section a{
   font-weight: 500;
   text-decoration: none;
 }
+.next-section{
+  float: right;
+  margin: 32px 0 !important;
+  .mat-icon{
+    color: #fff ;
+  }
+}
 
 h2 {
   font-family: $font;
