--- a/src/app/cutcal/cutcal.component.scss
+++ b/src/app/cutcal/cutcal.component.scss
@@ -2,6 +2,12 @@
   margin: 16px;
   display: block;
 }
+h1 {
+  color: #465a65;
+  text-shadow: 0 5px 5px  rgba(0,0,0,.2), 
+  0 8px 10px rgba(0,0,0,.14), 
+  0 3px 14px rgba(0,0,0,.12);
+}
 
 .logo{
   max-width: 120px
@@ -46,4 +52,7 @@
   :host {
     margin: 32px;
   }
+}
+.mat-icon{
+  margin-right: 8px;
 }
