--- a/src/app/time-picker-page/time-picker/styles/config.scss
+++ b/src/app/time-picker-page/time-picker/styles/config.scss
@@ -5,7 +5,7 @@ $primary-color: $theme-A-3;
 
 /* For ie only */
 $body-background-color: #fff;
-$primary-font-family: Roboto, "Helvetica Neue", sans-serif;
+$primary-font-family: $font;
 $button-color: $primary-color;
 
 $dial-active-color: #fff;
