--- a/src/assets/styles/palette.scss
+++ b/src/assets/styles/palette.scss
@@ -3,14 +3,15 @@
 // color contract checker: https://webaim.org/resources/contrastchecker/
 // color scaler:           http://paletton.com/#uid=13F0u0kcJsV48MN88-XhQnQmPiZ
 
-$font: /* Roman */ -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Fira Sans, Ubuntu, Oxygen, Oxygen Sans, Cantarell, Droid Sans, Apple Color Emoji, Segoe UI Emoji, Segoe UI Emoji, Segoe UI Symbol, Lucida Grande, Helvetica, Arial, sans-serif;
+$font: 'Muli';
+
+
 
 // borders
 $spacer: 1px solid #ccc;
 
-$background: #fff;
 
-
+$resume: #12797c;
 // Thunder Cloud - Color A
 $thunder-cloud: #505160;
 
