--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,23 +1,12 @@
 :host {
-  margin: 16px;
   display: block;
 }
-@media only screen and (min-width: 600px) {
-  :host {
-    margin: 32px;
-  }
-}
-.hyphens{
-  margin: 0;
-  color: #505160;
-}
-.link{
-  cursor: pointer;
-  margin-right: 8px;
-}
-.link img{
-  height: 40px;
-  width: 40px;
+
+h1 {
+  color: #465a65;
+  text-shadow: 0 5px 5px  rgba(0,0,0,.2), 
+  0 8px 10px rgba(0,0,0,.14), 
+  0 3px 14px rgba(0,0,0,.12);
 }
 
 
