--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,13 +1,45 @@
-:host{
+:host {
   display: block;
 }
 img.mat-list-icon {
-  border-radius: 10% !important;
+  border-radius: 50%;
 }
-.mat-icon{
-  color: #3f51b5;
+.mat-icon {
+  color: #465a65;
 }
-button{
+.meta-nate-a {
+  margin: 1rem 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  p {
+    color: #fff;
+    margin: 0.25em;
+  }
+  .p1 {
+    font-size: 2rem;
+  }
+  .p2 {
+    font-size: 1.5rem;
+    padding-left: 3px;
+  }
+  button {
+    width: 40px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  .mat-icon {
+    color: #fff;
+  }
+}
+.glamour-shot {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+}
+button {
   outline: none;
   background: transparent;
   cursor: pointer;
@@ -16,26 +48,71 @@ button{
   width: 100%;
   border: none;
   &:focus,
-  &:hover{
+  &:hover {
     background: rgba(0, 0, 0, 0.12);
   }
 
-  &.active-link{
+  &.active-link {
     cursor: default;
     background: rgba(0, 0, 0, 0.12);
   }
-  .mat-line{
+  .mat-line {
     text-align: left;
   }
 }
-.mat-list-item p{
-  color: rgba(0, 0, 0, 0.54);
+.mat-list-item p {
+  color: #fff;
 }
 
-h2{
-  margin: 0 12px;
-  font-size: 18px;
-  text-align: center;
-  color: #3f51b5;
+.resmue-link {
+  color: #4acdd9;
+  text-align: right;
+  padding: 0.25rem 1.5rem;
+  width: 100%;
+}
+h2 {
+  margin: 0;
+  font-size: 1.25rem;
+  padding-left: 1.5rem;
+  color: #4acdd9;
+  background: #576a71;
+  position: relative;
+  // text-transform: uppercase;
+  &::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    background: #4acdd9;
+    height: 100%;
+    width: 8px;
+  }
+}
+h3 {
+  margin: 0;
+  font-size: 1rem;
+  padding: 0.5rem 1.5rem;
+  color: #fff;
+  text-align: left;
+  font-weight: 400;
+  letter-spacing: 1px;
 }
 
+.links {
+  margin: 1.5rem;
+}
+.link {
+  cursor: pointer;
+  margin-right: 8px;
+  background: #fff;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.link img {
+  height: 24px;
+  width: 24px;
+}
