--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,9 @@ body {
   margin: 0; 
   font-family: Roboto, "Helvetica Neue", sans-serif; 
 }
+* {
+  box-sizing: border-box;
+}
 
 .spacer {
   flex: 1 1 auto;
@@ -45,6 +48,11 @@ body
 section .mat-icon{
   color: #333
 }
+.container {
+  width: 100% !important;
+  max-width: 800px !important;
+  margin: 0 auto !important;
+}
 
 section a{
   color: #3f51b5;
@@ -58,7 +66,10 @@ section a{
     color: #fff ;
   }
 }
-
+h1{
+  text-align: center;
+  font-size: 4rem;
+}
 h2 {
   font-family: $font;
   font-size: 32px;
