--- a/src/app/work-experience/work-experience.component.scss
+++ b/src/app/work-experience/work-experience.component.scss
@@ -2,35 +2,16 @@
 
 h1 {
   color: #465a65;
-  text-shadow: 0 5px 5px  rgba(0,0,0,.2), 
-  0 8px 10px rgba(0,0,0,.14), 
-  0 3px 14px rgba(0,0,0,.12);
+}
+.hero {
+  background-image: url('../../assets/office.jpg');
+  background-size: cover;
 }
 
-table {
-  color: #333;
-  background: #576a71;
-  border-collapse: collapse;
-  border-radius: 16px;
-}
-iframe, table {
+iframe {
   @include mat-elevation(5);
 }
-tr:nth-child(odd) {
-  background: #465a65;
-}
-td {
-  padding: 8px 16px;
-  color: #fff;
-  a {
-    color: #fff;
-    text-decoration: underline;
-  }
-}
-.td_label{
-  font-weight: bold;
-  color: #4acdd9
-}
+
 p {
   margin-top: 32px;
 }
@@ -46,19 +27,4 @@ p::first-letter {
   width: 180px;
   border-radius: 16px;
   @include mat-elevation(5);
-}
-table tr:first-child td:first-child {
-  border-top-left-radius: 16px;
-}
-
-table tr:first-child td:last-child {
-  border-top-right-radius: 16px;
-}
-
-table tr:last-child td:first-child {
-  border-bottom-left-radius: 16px;
-}
-
-table tr:last-child td:last-child {
-  border-bottom-right-radius: 16px;
 }
