--- a/src/app/reusables/hero/hero.component.scss
+++ b/src/app/reusables/hero/hero.component.scss
@@ -3,11 +3,7 @@
 :host {
   position: relative;
   display: block;
-  height: 20vh;
-  margin-bottom: 70px;
-  @include mat-elevation(5);
-  border-bottom-left-radius: 32px;
-  border-bottom-right-radius: 32px;
+  height: 300px;
   background: #ddd;
   div{
     position: absolute;
