--- a/src/app/diet-stats/diet-stats.component.scss
+++ b/src/app/diet-stats/diet-stats.component.scss
@@ -1,11 +1,10 @@
-:host {
-  margin: 16px;
-  display: block;
+
+hero {
+  background-size: cover;
 }
 
 h1 {
   color: #5a699c;
-  margin: 0;
 }
 
 .mat-card-header {
@@ -16,20 +15,18 @@ h1 {
   border-radius: 0;
 }
 
-.example-header-image {
-  background-image: url('../../assets/diet-stats.png');
-  background-size: cover;
-}
 .add-margin {
   margin-left: 4px;
 }
 
 @media only screen and (min-width: 600px) {
-  :host {
-    margin: 32px;
-  }
 }
 .goto {
   color: #fff;
   background: #5a699c;
+}
+
+object {
+  width:100%;
+  height:100%;
 }
