--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,12 +23,6 @@ p{
   font-size: 16px;
   line-height: 28px;
   position: relative;
-  &::first-letter:not(.no-first-letter) {
-    font-size: 200%;
-    color: #3f51b5;
-    font-weight: 500;
-    font-family: Palatino, URW Palladio L, serif;
-  }
 }
 img {
   width: 100%;
@@ -76,7 +70,6 @@ h2 {
   line-height: 40px;
   font-weight: 400;
   color: #505160;
-  margin: 8px 0;
 }
 h3{
   font-family: $font;
@@ -141,4 +134,8 @@ table.overview {
 .github-link{
   height: 30px;
   width: 30px;
+}
+.hero{
+  height: 325px;
+  object-fit: cover;
 }
