updated with new dietsstats

--- a/src/app/algolia/algolia.html
+++ b/src/app/algolia/algolia.html
@@ -83,12 +83,12 @@
                             <img
                                 *cdkDragPreview
                                 class="drag-image"
-                                [src]="hit.img_src"
+                                [src]="hit.avatar"
                                 [alt]="hit.name"
                             />
                             <img
                                 loading="lazy"
-                                [attr.src]="hit.img_src"
+                                [attr.src]="hit.avatar"
                                 [attr.alt]="hit.name"
                             />
                             <div class="item-text" fxLayout="column" fxFlex>
