--- a/src/app/cutcal/cutcal.component.scss
+++ b/src/app/cutcal/cutcal.component.scss
@@ -1,7 +1,13 @@
 :host {
-  margin: 16px;
   display: block;
 }
+
+
+.hero {
+  background-size: cover;
+  transform: skew(3deg, 3deg);
+}
+
 h1 {
   color: #465a65;
 }
@@ -23,6 +29,10 @@ h1 {
   color: #555;
 }
 
+.overview {
+  max-width: 500px;
+  margin: 0 auto 4rem;
+}
 
 
 .mat-card-avatar{
@@ -45,11 +55,6 @@ h1 {
   text-decoration: none;
 }
 
-@media only screen and (min-width: 600px) {
-  :host {
-    margin: 32px;
-  }
-}
 .mat-icon{
   margin-right: 8px;
 }
