--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -15,3 +15,24 @@ p {
   border-radius: 16px;
   @include mat-elevation(5);
 }
+
+.flexible-section {
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+  align-items: center;
+
+  img {
+    margin: 2.5rem;
+  }
+
+}
+
+@media only screen and (min-width: 1000px) {
+  .flexible-section {
+    flex-direction: row;
+    img {
+      margin-left: 0
+    }
+  }
+}
