--- a/src/app/citi/citi.component.scss
+++ b/src/app/citi/citi.component.scss
@@ -3,16 +3,16 @@
   display: block;
 }
 
-.logo{
-  max-width: 350px
+.logo {
+  max-width: 350px;
 }
-.team{
+.team {
   max-width: 550px;
   float: right;
   margin-left: 32px;
 }
 
-.arrow{
+.arrow {
   position: absolute;
   top: -27px;
   right: 367px;
@@ -20,15 +20,40 @@
   color: #555;
 }
 
-.mat-card-avatar{
+.mat-card-avatar {
   border-radius: 0;
 }
-.add-margin{
+.add-margin {
   margin-left: 4px;
 }
 
 @media only screen and (min-width: 600px) {
   :host {
     margin: 32px;
+  }
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.stack-mobile {
+  display: flex;
+  flex-direction: column;
+}
+iframe {
+  display: block;
+}
+
+@media only screen and (min-width: 1000px) {
+  .stack-mobile {
+    flex-direction: row;
+  }
+
+  .mat-card,
+  iframe {
+    min-width: 45%;
+    margin-right: 2rem;
   }
 }
