--- a/src/app/diet-stats/diet-stats.component.scss
+++ b/src/app/diet-stats/diet-stats.component.scss
@@ -30,3 +30,14 @@ object {
   width:100%;
   height:100%;
 }
+
+.container {
+  box-sizing: border-box;
+  display: flex;
+  place-content: center;
+  align-items: center;
+  padding: 1rem;
+  &.column {
+    flex-direction: column;
+  }
+}
