--- a/src/app/military/military.component.scss
+++ b/src/app/military/military.component.scss
@@ -6,7 +6,7 @@ h1 {
 }
 
 .world {
-  
+
   position: relative;
   display: block;
   height: 20vh;
@@ -42,6 +42,7 @@ h2 {
 
 .mat-card {
   margin-bottom: 1rem;
+  max-width: 45%;
 }
 
 .mat-card-image {
@@ -53,3 +54,9 @@ h2 {
 }
 
 
+.awards {
+  display: flex;
+  flex-wrap: wrap;
+  place-content: center space-around;
+  align-items: start;
+}
