--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -1,4 +1,4 @@
-@import '@angular/material/theming';
+@use '@angular/material' as mat;
 hero {
   background-size: cover;
 }
@@ -13,7 +13,7 @@ p {
   height: 180px;
   width: 180px;
   border-radius: 16px;
-  @include mat-elevation(5);
+  @include mat.elevation(5);
 }
 
 .flexible-section {
