--- a/src/app/military/military.component.scss
+++ b/src/app/military/military.component.scss
@@ -1,5 +1,5 @@
 
-@import '@angular/material/theming';
+@use '@angular/material' as mat;
 
 h1 {
   color: #465a65;
@@ -32,7 +32,7 @@ h1 {
   max-width: 500px;
   margin: 2rem auto;
   border: 2px double #576a71;
-  @include mat-elevation(5);
+  @include mat.elevation(5);
 }
 
 h2 {
