--- a/src/app/reusables/hero/hero.component.scss
+++ b/src/app/reusables/hero/hero.component.scss
@@ -1,4 +1,4 @@
-@import '@angular/material/theming';
+@use '@angular/material' as mat;
 
 :host {
   position: relative;
@@ -15,7 +15,7 @@
     left: 0;
     right: 0;
     text-align: center;
-    @include mat-elevation(10);
+    @include mat.elevation(10);
     border-radius: 16px;
   }
   ::ng-deep img {
