--- a/src/app/work-experience/work-experience.component.scss
+++ b/src/app/work-experience/work-experience.component.scss
@@ -1,4 +1,4 @@
-@import '@angular/material/theming';
+@use '@angular/material' as mat;
 
 
 h1 {
@@ -10,7 +10,7 @@ h1 {
 }
 
 iframe {
-  @include mat-elevation(5);
+  @include mat.elevation(5);
   margin: 0 auto;
   display: block;
 }
@@ -23,7 +23,7 @@ p {
   height: 180px;
   width: 180px;
   border-radius: 16px;
-  @include mat-elevation(5);
+  @include mat.elevation(5);
 }
 
 .flexible-section {
